bugfix with stretched links

--- a/bs5/styles/_style.scss
+++ b/bs5/styles/_style.scss
@@ -107,6 +107,7 @@
 
   .co-linkblock {
     color: var(--bs-body-color);   
+    position: relative;
 
     &:hover {
       figure {
